Fix post page not showing current user

--- a/src/client/src/styles/main.css
+++ b/src/client/src/styles/main.css
@@ -41,6 +41,7 @@
   color: var(--blue);
   font-weight: bold;
   font-size: 24px;
+  text-decoration: none;
 }
 
 .header nav {
